--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         />
 
         <!-- css -->
+        <link rel="stylesheet" href="/styles/journal.css" />
         <link rel="stylesheet" href="/styles/reset.css" />
         <link rel="stylesheet" href="/styles/global.css" />
         <!-- add link for page specific css -->
@@ -177,6 +178,7 @@
 
                     <label>
                         <div>Your Opponent</div>
+
                         <select
                             name="opponent-hero"
                             required
@@ -308,6 +310,7 @@
                             <option value="zues">Zues</option>
                         </select>
                     </label>
+                    <button id="submit-button"></button>
                 </form>
             </section>
             <section id="output-container">
